WANPIPE TDM VOICE - IP/WAN Package

------------------------------------------------------------------------------
Author: Nenad Corbic <ncorbic@sangoma.com>
Copyright (c) 1995-2013 Sangoma Technologies Inc.

For more info visit: http://wiki.sangoma.com
------------------------------------------------------------------------------

* Wed Sep 25 2013 Nenad Corbic <ncorbic@sangoma.com> -  7.0.6
==================================================================

- Updated wanpipemon to trace on multipel dchan in a single span
  eg: wanpipemon -i w1g1 -chan 1 -c trd
  If chan is not specificed then all dchans will be traced together.
- Updated sample tapping application.
  Allow configuration for dchan and seven bit hdlc

* Mon Jul 15 2013 Nenad Corbic <ncorbic@sangoma.com> -  7.0.5
==================================================================

- Updated for Dahdi 2.7
- Fixed full dahdi startup on wanpipe dahdi mode.

* Wed May 22 2013 Nenad Corbic <ncorbic@sangoma.com> -  7.0.3
==================================================================

- Fixed file structure of sample_data_tapping application
- No driver changes from 7.0.2


* Fri May 10 2013 Nenad Corbic <ncorbic@sangoma.com> -  7.0.2
==================================================================

- Added sync error statistic in wanpipeomon Ta command
  Sync error indicates clocking or synchronizatio errors
  on T1/E1 lines.  Provides added statistic to debug line,
  slip errors on T1/E1.

- Fixed DAHDI reconfiguration issues.
  running dahdi_cfg multiple times will not bring down T1/E1 link
  Added config option to change clocking from MASTER to NORMAL
  from dahdi system.conf

- New sample_data_tapping sample application for T116 and other
  tapping boards.


* Tue Mar 19 2013 Nenad Corbic <ncorbic@sangoma.com> -  7.0.1
==================================================================

- Update to wancfg_dahdi configuration for GSM
- Update to setup-sangoma configuration for GSM