@@ -1,1 +1,1 @@
-wanpipe-7.0.6
+wanpipe-7.0.8
